--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <section class="left">
-        <input type="number" class="guess" />
+        <input type="number" class="guess" value="0"/>
         <button class="btn check">Check!</button>
       </section>
       <section class="right">
